# lovepotion

./: .clang-format  .doozer-backup.json  .doozer.json  .gitattributes  .gitignore  .gitmodules  .travis-deps.sh  .travis.yml  1  3ds_workaround.rsf  CMakeLists.txt  CONTRIBUTING.md  Implemented.md  LICENSE  LICENSE.md  LovePotion.3dsx  LovePotion.code-workspace  LovePotion.elf  LovePotion.smdh  Makefile  README.MD  README.md  Untitled.txt  _config.yml  cia_workaround.rsf  compile.txt  diff.txt  errors.txt  fntcnv.py  gdb.txt  index.md  list.md  log.txt  lovepotion.code-workspace  main.lua  pkglist.txt  readme.md  run.sh  undo.sh  vera12.json
platform/cafe/: CMakeLists.txt  pkglist.txt
platform/cafe/content/shaders/: color.gsh  color_fsh.asm  primitive.gsh  texture.gsh  video.gsh
platform/cafe/include/: boot.hpp  fatal.hpp  seeprom.hpp
platform/cafe/include/common/: matrix_ext.hpp  screen_ext.hpp
platform/cafe/include/driver/: AudioBuffer.hpp  DigitalSound.hpp  DigitalSoundMix.hpp  EventQueue.hpp  SoundChannel.hpp
platform/cafe/include/driver/audio/: AudioBuffer.hpp  DigitalSound.hpp  DigitalSoundMix.hpp  SoundChannel.hpp
platform/cafe/include/driver/display/: Attribute.hpp  AttributeLayout.hpp  Framebuffer.hpp  GX2.hpp  Renderer.hpp  Uniform.hpp  UniqueBuffer.hpp  (+1 more)
platform/cafe/include/modules/: fontmodule_ext.hpp  graphics_ext.hpp  joystickmodule_ext.hpp  keyboard_ext.hpp  system_ext.hpp  timer_ext.hpp  window_ext.hpp
platform/cafe/include/objects/: font_ext.hpp  gamepad.hpp  imagedata_ext.hpp  joystick_ext.hpp  procontroller.hpp  rasterizer_ext.hpp  shader_ext.hpp  source_ext.hpp  textbatch_ext.hpp  texture_ext.hpp  truetyperasterizer.hpp  truetyperasterizer_ext.hpp
platform/cafe/include/scripts/: wrap_window.lua
platform/cafe/include/utilities/: abort.hpp  swkbdthread.hpp  wpad.hpp
platform/cafe/libraries/: luasocket.patch
platform/cafe/shaders/: texture_fsh.asm  transform_vsh.asm
platform/cafe/source/: boot.cpp  fatal.cpp  seeprom.cpp
platform/cafe/source/common/: matrix_ext.cpp  screen.cpp
platform/cafe/source/driver/: DigitalSound.cpp  EventQueue.cpp
platform/cafe/source/modules/: fontmodule_ext.cpp  graphics_ext.cpp  imagemodule_ext.cpp  joystickmodule_ext.cpp  keyboard_ext.cpp  love_ext.cpp  system_ext.cpp  timer_ext.cpp  window_ext.cpp  wrap_fontmodule_ext.cpp
platform/cafe/source/objects/: font_ext.cpp  gamepad.cpp  imagedata_ext.cpp  joystick_ext.cpp  procontroller.cpp  rasterizer_ext.cpp  shader_ext.cpp  source_ext.cpp  textbatch_ext.cpp  texture_ext.cpp  truetyperasterizer.cpp  wrap_font_ext.cpp  wrap_imagedata_ext.cpp
platform/cafe/source/utilities/: swkbdthread.cpp  wpad.cpp
platform/ctr/: CMakeLists.txt  pkglist.txt
platform/ctr/asm/: asm_macros.s.h  memcpy.s
platform/ctr/assets/shaders/: main.v.pica
platform/ctr/include/: asm_macros.s.h  boot.hpp
platform/ctr/include/common/: matrix_ext.hpp  screen_ext.hpp
platform/ctr/include/driver/: DigitalSound.hpp  EventQueue.hpp
platform/ctr/include/modules/: fontmodule_ext.hpp  graphics_ext.hpp  joystickmodule_ext.hpp  keyboard_ext.hpp  sensor_ext.hpp  system_ext.hpp  timer_ext.hpp  window_ext.hpp
platform/ctr/include/objects/: font_ext.hpp  imagedata_ext.hpp  joystick_ext.hpp  rasterizer_ext.hpp  shader_ext.hpp  source_ext.hpp  textbatch_ext.hpp  texture_ext.hpp  truetyperasterizer_ext.hpp
platform/ctr/include/scripts/: wrap_font.lua  wrap_window.lua  wrap_window_messagebox.lua
platform/ctr/include/utilities/: abort.hpp
platform/ctr/libraries/: luasocket.patch
platform/ctr/libraries/thread/: ctr_thread.h
platform/ctr/romfs/nogame/: cartridge.t3x  config.lua  heart.t3x  nogame.t3x
platform/ctr/romfs/shaders/: main_v_pica.shbin
platform/ctr/shaders/: main.v.pica
platform/ctr/source/: boot.cpp  runtime.cpp
platform/ctr/source/common/: matrix_ext.cpp  screen.cpp  screen_ext.cpp
platform/ctr/source/driver/: DigitalSound.cpp  EventQueue.cpp
platform/ctr/source/modules/: fontmodule_ext.cpp  graphics_ext.cpp  imagemodule_ext.cpp  joystickmodule_ext.cpp  keyboard_ext.cpp  love_ext.cpp  sensor_ext.cpp  system_ext.cpp  timer_ext.cpp  window_ext.cpp  wrap_fontmodule_ext.cpp  wrap_graphics_ext.cpp  wrap_system_ext.cpp
platform/ctr/source/objects/: font_ext.cpp  imagedata_ext.cpp  joystick_ext.cpp  rasterizer_ext.cpp  shader_ext.cpp  source_ext.cpp  textbatch_ext.cpp  texture_ext.cpp  truetyperasterizer_ext.cpp  wrap_font_ext.cpp  wrap_imagedata_ext.cpp
platform/hac/: CMakeLists.txt  pkglist.txt
platform/hac/include/: boot.hpp
platform/hac/include/common/: matrix_ext.hpp  screen_ext.hpp
platform/hac/include/driver/: DigitalSound.hpp  DigitalSoundMem.hpp  EventQueue.hpp
platform/hac/include/modules/: fontmodule_ext.hpp  graphics_ext.hpp  joystickmodule_ext.hpp  keyboard_ext.hpp  system_ext.hpp  timer_ext.hpp  window_ext.hpp
platform/hac/include/objects/: font_ext.hpp  imagedata_ext.hpp  joystick_ext.hpp  rasterizer_ext.hpp  shader_ext.hpp  source_ext.hpp  textbatch_ext.hpp  texture_ext.hpp  truetyperasterizer_ext.hpp
platform/hac/include/scripts/: wrap_window_messagebox.lua
platform/hac/include/utilities/: abort.hpp  npad.hpp
platform/hac/libraries/: luasocket.patch
platform/hac/romfs/shaders/: color_fsh.dksh  texture_fsh.dksh  transform_vsh.dksh  video_fsh.dksh
platform/hac/shaders/: color_fsh.glsl  texture_fsh.glsl  transform_vsh.glsl  video_fsh.glsl
platform/hac/source/: boot.cpp  runtime.cpp
platform/hac/source/common/: matrix_ext.cpp  screen.cpp  screen_ext.cpp
platform/hac/source/driver/: DigitalSound.cpp  EventQueue.cpp
platform/hac/source/modules/: fontmodule_ext.cpp  graphics_ext.cpp  imagemodule_ext.cpp  joystickmodule_ext.cpp  keyboard_ext.cpp  love_ext.cpp  system_ext.cpp  timer_ext.cpp  window_ext.cpp  wrap_fontmodule_ext.cpp
platform/hac/source/objects/: font_ext.cpp  imagedata_ext.cpp  joystick_ext.cpp  rasterizer_ext.cpp  shader_ext.cpp  source_ext.cpp  textbatch_ext.cpp  texture_ext.cpp  truetyperasterizer.cpp  wrap_font_ext.cpp  wrap_imagedata_ext.cpp  wrap_joystick_ext.cpp
platform/hac/source/utilities/: npad.cpp
(+2238 files in other folders)
